--- a/staff/marti-malek/spotify-app/styles/main.sass
+++ b/staff/marti-malek/spotify-app/styles/main.sass
@@ -1,7 +1,7 @@
 %margin-center
     margin-left: auto
     margin-right: auto
-    
+
 main
     font-family: 'Major Mono Display', monospace
 .container-fluid
@@ -24,8 +24,11 @@ main
     background-color: gray
     color: white
     @extend %margin-center
-
 li 
     text-decoration: none
 #login__btn
     margin-left: 1.9rem
+#cursor
+    cursor: url(http://www.rw-designer.com/cursor-view/5683.png),auto
+#rainbow
+    cursor: url(http://www.rw-designer.com/cursor-view/115879.gif),auto
