added song playable + styling

--- a/staff/marti-malek/spotify-app/styles/main.sass
+++ b/staff/marti-malek/spotify-app/styles/main.sass
@@ -24,6 +24,8 @@ main
     background-color: gray
     color: white
     @extend %margin-center
+.align-center
+    text-align: center
 li 
     text-decoration: none
 #login__btn
