added goBack buttons and bs styling

--- a/staff/marti-malek/spotify-app/styles/main.css
+++ b/staff/marti-malek/spotify-app/styles/main.css
@@ -35,6 +35,7 @@ main {
   display: unset;
   background-color: gray;
   color: white;
+  border-radius: 0.2rem;
 }
 
 .align-center {
@@ -47,6 +48,19 @@ li {
 
 #login__btn {
   margin-left: 1.9rem;
+}
+
+#logout__btn {
+  position: absolute;
+  right: 0.5rem;
+  top: -4.5rem;
+}
+
+#goBack {
+  position: absolute;
+  top: 8.4rem;
+  right: 0rem;
+  background-color: gray;
 }
 
 #cursor {
