--- a/staff/marti-malek/spotify-app/styles/main.sass
+++ b/staff/marti-malek/spotify-app/styles/main.sass
@@ -24,12 +24,22 @@ main
     background-color: gray
     color: white
     @extend %margin-center
+    border-radius: 0.2rem
 .align-center
     text-align: center
 li 
     text-decoration: none
 #login__btn
     margin-left: 1.9rem
+#logout__btn
+    position: absolute
+    right: 0.5rem
+    top: -4.5rem
+#goBack
+    position: absolute
+    top: 8.4rem
+    right: 0rem
+    background-color: gray
 #cursor
     cursor: url(http://www.rw-designer.com/cursor-view/5683.png),auto
 #rainbow
