--- a/staff/marti-malek/spotify-app/styles/main.sass
+++ b/staff/marti-malek/spotify-app/styles/main.sass
@@ -27,6 +27,13 @@ main
     border-radius: 0.2rem
 .align-center
     text-align: center
+    align-self: center
+    margin: 0
+.song-card
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+    align-content: center
 li 
     text-decoration: none
 #login__btn
