--- a/staff/marti-malek/spotify-app/styles/main.css
+++ b/staff/marti-malek/spotify-app/styles/main.css
@@ -40,6 +40,15 @@ main {
 
 .align-center {
   text-align: center;
+  align-self: center;
+  margin: 0;
+}
+
+.song-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
 }
 
 li {
