basic app finished

--- a/staff/marti-malek/spotify-app-react/styles/main.sass
+++ b/staff/marti-malek/spotify-app-react/styles/main.sass
@@ -43,6 +43,10 @@ li
 .feedback--error 
     background-color: tomato
     color: white
+.goToRegister
+    position: absolute
+    left: 9rem
+    top: 12.8rem
 
 /* END */
 .login__btn
