--- a/staff/marti-malek/spotify-app-react/styles/main.css
+++ b/staff/marti-malek/spotify-app-react/styles/main.css
@@ -65,6 +65,12 @@ li {
   color: white;
 }
 
+.goToRegister {
+  position: absolute;
+  left: 9rem;
+  top: 12.8rem;
+}
+
 /* END */
 .login__btn {
   margin-left: 1.9rem;
