added goBack buttons

--- a/staff/marti-malek/spotify-app-react/styles/main.sass
+++ b/staff/marti-malek/spotify-app-react/styles/main.sass
@@ -55,7 +55,8 @@ li
     position: absolute
     right: 0.5rem
     top: -4.5rem
-#goBack
+.goBack
+    border: none
     position: absolute
     top: 8.4rem
     right: 0rem
