--- a/staff/marti-malek/spotify-app-react/styles/main.css
+++ b/staff/marti-malek/spotify-app-react/styles/main.css
@@ -76,6 +76,32 @@ li {
   margin-left: 1.9rem;
 }
 
+.popover {
+  top: 5rem;
+  left: -7rem;
+  z-index: 1060;
+  max-width: 276px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: left;
+  text-align: start;
+  text-decoration: none;
+  text-shadow: none;
+  text-transform: none;
+  letter-spacing: normal;
+  word-break: normal;
+  word-spacing: normal;
+  white-space: normal;
+  line-break: auto;
+  font-size: 0.875rem;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+}
+
 #logout__btn {
   position: absolute;
   right: 0.5rem;
