finished hover added half-favs

--- a/staff/marti-malek/spotify-app-react/styles/main.sass
+++ b/staff/marti-malek/spotify-app-react/styles/main.sass
@@ -51,6 +51,11 @@ li
 /* END */
 .login__btn
     margin-left: 1.9rem
+.centerMe
+    font-size: 1.5rem
+    padding-left: 0.7rem
+    display: flex !important
+    align-items: center
 .popover
     top: 5rem
     left: -7rem
