--- a/staff/marti-malek/spotify-app-react/styles/main.css
+++ b/staff/marti-malek/spotify-app-react/styles/main.css
@@ -76,6 +76,13 @@ li {
   margin-left: 1.9rem;
 }
 
+.centerMe {
+  font-size: 1.5rem;
+  padding-left: 0.7rem;
+  display: flex !important;
+  align-items: center;
+}
+
 .popover {
   top: 5rem;
   left: -7rem;
