spotify with react

--- a/staff/marti-malek/spotify-app-react/styles/main.css
+++ b/staff/marti-malek/spotify-app-react/styles/main.css
@@ -131,4 +131,8 @@ li {
   cursor: url(http://www.rw-designer.com/cursor-view/115879.gif), auto;
 }
 
+.heart {
+  cursor: url(http://ani.cursors-4u.net/symbols/sym-8/sym752.cur), auto;
+}
+
 /*# sourceMappingURL=main.css.map */
