--- a/staff/marti-malek/spotify-web-app/src/components/artists/index.pug
+++ b/staff/marti-malek/spotify-web-app/src/components/artists/index.pug
@@ -7,7 +7,7 @@ block content
         ul
             each artist in artists
                 li
-                    a(href=`/search&album&${artist.id}`)= artist.name
+                    a(href=`/search-artist&${artist.id}`)= artist.name
                             if artist.images[0]
                                 img(src=`${artist.images[0].url}` width="100px")
                             else 
