--- a/staff/marti-malek/spotify-web-app/src/components/feedback/index.pug
+++ b/staff/marti-malek/spotify-web-app/src/components/feedback/index.pug
@@ -1,2 +1,2 @@
 mixin feedback(message, level)
-  section(class=`feedback feedback--${level}`)= message
+  section(class=`col-11', ml-5='', m-2='', alert='', alert-danger='', feedback='', feedback--${level}`)=message
