--- a/staff/marti-malek/spotify-web-app/src/components/albums/index.pug
+++ b/staff/marti-malek/spotify-web-app/src/components/albums/index.pug
@@ -1,14 +1,20 @@
 extends ../layout
 
 include ../feedback/index
+include ../search/index
 
 block content
-    section ALBUMS
-        ul
+    +search
+    section(class="container-fluid")
+        h3(class="title center d-flex justify-content-center") ALBUMS
+        a(class="btn-sm btn-secondary" href="/home") Go Home
+        ul(class="row d-flex justify-content-center")
             each album in albums
-                li
-                    a(href=`/search-album&${album.id}`)= album.name
+                li(class="card card-album col-md-4 col-xl-3 col-7 m-1 p-3 pb-4 shadow-sm card-hover")
+                    a(href=`/search-album&${album.id}` class='card-title text-center')= album.name
                             if album.images[0]
-                                img(src=`${album.images[0].url}` width="100px")
+                                img(src=`${album.images[0].url}` class='card-img-top center album__image' width="100px")
                             else 
-                                img(src=`https://www.google.es/imgres?imgurl=https%3A%2F%2Fwww.bensound.com%2Fbensound-img%2Fhappyrock.jpg&imgrefurl=https%3A%2F%2Fwww.bensound.com%2Froyalty-free-music&docid=6bPI5dSHVd-hDM&tbnid=soAEf4Owr8SbiM%3A&vet=10ahUKEwi23prvsb7gAhW16uAKHfiSCJQQMwhpKAIwAg..i&w=358&h=250&client=opera&bih=627&biw=1366&q=music%20photo&ved=0ahUKEwi23prvsb7gAhW16uAKHfiSCJQQMwhpKAIwAg&iact=mrc&uact=8` width="100px")
+                                img(src=`https://www.google.es/imgres?imgurl=https%3A%2F%2Fwww.bensound.com%2Fbensound-img%2Fhappyrock.jpg&imgrefurl=https%3A%2F%2Fwww.bensound.com%2Froyalty-free-music&docid=6bPI5dSHVd-hDM&tbnid=soAEf4Owr8SbiM%3A&vet=10ahUKEwi23prvsb7gAhW16uAKHfiSCJQQMwhpKAIwAg..i&w=358&h=250&client=opera&bih=627&biw=1366&q=music%20photo&ved=0ahUKEwi23prvsb7gAhW16uAKHfiSCJQQMwhpKAIwAg&iact=mrc&uact=8` class='card-img-top center album__image' width="100px")
+        if feedback
+            +feedback
