--- a/staff/marti-malek/spotify-web-app/src/components/layout.pug
+++ b/staff/marti-malek/spotify-web-app/src/components/layout.pug
@@ -1,7 +1,11 @@
 html
   head
-    title HELLO WORLD!
+    title Spotify-Web-App
     link(rel='stylesheet', type='text/css', href='style.css')
+    link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
+    link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous")
+    link(href="https://fonts.googleapis.com/css?family=Felipa" rel="stylesheet")
   body.main
-    h1 SPOTIFY WEB APP! 🙈
+    h1(class="d-flex justify-content-center m-3") SPOTIFY WEB APP! 🙈
+    hr
     block content
