--- a/staff/marti-malek/spotify-web-app/src/components/panel.sass
+++ b/staff/marti-malek/spotify-web-app/src/components/panel.sass
@@ -1,6 +1,11 @@
 @import ../utils
 
 %panel
-    +round-border(1em, black, solid, 1px)
-    padding: 1em
-    margin: 1em
+    font-family: 'Felipa', cursive
+    a 
+        text-decoration: none
+        color: black
+    a:hover 
+        text-decoration: none
+        color: black
+        font-weight: bold
