--- a/staff/marti-malek/spotify-web-app/src/components/tracks/index.pug
+++ b/staff/marti-malek/spotify-web-app/src/components/tracks/index.pug
@@ -1,14 +1,16 @@
 extends ../layout
 
 include ../feedback/index
+include ../search/index
 
 block content
-    section TRACKS
+    +search
+    section(class="tracks container-fluid")
+        h3(class="title") TRACKS
+        a(class="btn-sm btn-secondary" href="/home") Go Home
         ul
             each track in tracks
-                li
-                    a(href=`/search-song&${track.id}`)= track.name
-                            //- if track.images[0]
-                            //-     img(src=`${track.images[0].url}` width="100px")
-                            //- else 
-                            //-     img(src=`https://www.google.es/imgres?imgurl=https%3A%2F%2Fwww.bensound.com%2Fbensound-img%2Fhappyrock.jpg&imgrefurl=https%3A%2F%2Fwww.bensound.com%2Froyalty-free-music&docid=6bPI5dSHVd-hDM&tbnid=soAEf4Owr8SbiM%3A&vet=10ahUKEwi23prvsb7gAhW16uAKHfiSCJQQMwhpKAIwAg..i&w=358&h=250&client=opera&bih=627&biw=1366&q=music%20photo&ved=0ahUKEwi23prvsb7gAhW16uAKHfiSCJQQMwhpKAIwAg&iact=mrc&uact=8` width="100px")
+                li(class="row d-flex justify-content-center")
+                    a(href=`/search-song&${track.id}` class="pr-3")= track.name
+        if feedback
+            +feedback
