--- a/staff/marti-malek/spotify-web-app/src/components/user/index.pug
+++ b/staff/marti-malek/spotify-web-app/src/components/user/index.pug
@@ -1,2 +1,5 @@
 mixin user(user)
-  = user
+  div(class="row col-12")
+    p(class="m-1 col-10" style="font-size: 2rem")= `Welcome, `+user
+    form(action='/logout', class="col-1" method='post')
+      button(type='submit' class="btn btn-secondary m-1") Logout
