--- a/staff/marti-malek/spotify-web-app/src/index.sass
+++ b/staff/marti-malek/spotify-web-app/src/index.sass
@@ -4,3 +4,5 @@
 @import components/landing
 @import components/feedback
 @import components/main
+@import components/artists
+@import components/albums
