added backgroun to landing and 404

--- a/staff/marti-malek/spotify-web-app/src/components/landing-layout.pug
+++ b/staff/marti-malek/spotify-web-app/src/components/landing-layout.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous")
     link(href="https://fonts.googleapis.com/css?family=Felipa" rel="stylesheet")
-  body(class="main")
+  body(class="main" style="background-image: url(https://cdn-images-1.medium.com/max/1920/1*0cL5ZX8XLLqvOb5CwrqK2g.jpeg); background-size: 1400px 720px")
     h1(class="d-flex justify-content-center m-3") SPOTIFY WEB APP! 🙈
     hr
     block content
