--- a/staff/marti-malek/spotify-web-app/src/components/register-confirm/index.pug
+++ b/staff/marti-malek/spotify-web-app/src/components/register-confirm/index.pug
@@ -3,9 +3,9 @@ extends ../layout
 include ../feedback/index
 
 block content
-    section.register
-        h2 Registration confirmation
+    section(class="register container-fluid")
+        h2(class="m3") Registration confirmation
         |         Ok, user #{email}
         |  successfully registered, please proceed to 
-        a(href='/login') login
+        a(href='/login' style="font-size:1.5rem") login
         | .
