--- a/staff/marti-malek/spotify-web-app/public/style.css
+++ b/staff/marti-malek/spotify-web-app/public/style.css
@@ -126,11 +126,25 @@
 
 .album__image {
   border-radius: 50%;
+  border-top-left-radius: 1%;
+}
+.album__image:hover {
+  animation: turn 5s ease-in;
+  border-top-left-radius: 50% !important;
 }
 
 .card-img-top {
   border-top-left-radius: 1% !important;
   border-top-right-radius: 50% !important;
+}
+
+@keyframes turn {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
