--- a/staff/marti-malek/spotify-NERM/spotify-react/src/index.sass
+++ b/staff/marti-malek/spotify-NERM/spotify-react/src/index.sass
@@ -12,6 +12,8 @@ main
     width: 80%
 .artist__image
     @extend %margin-center
+.cursor-pointer
+    cursor: pointer
 .album__image
     @extend %margin-center
     border-radius: 10rem
