--- a/staff/marti-malek/spotify-NERM/spotify-react/src/components/Song/index.sass
+++ b/staff/marti-malek/spotify-NERM/spotify-react/src/components/Song/index.sass
@@ -6,6 +6,8 @@ main
     font-family: 'Major Mono Display', monospace
 .container-fluid
     padding:0
+.cursor-pointer
+    cursor: pointer
 .row
     justify-content: center
 .card-img-top
